# FF-Fabric

./: .gitignore  API_REFERENCE.md  COMPLETION_CHECKLIST.md  CORE_PLAN.MD  IMPLEMENTATION_SUMMARY.md  PHASE1_SUMMARY.txt  PROXMOX_CLIENT_GUIDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  usage.py
fabric/: __init__.py  api.py  base.py  exceptions.py  models.py
fabric/clients/: __init__.py  proxmox_client.py
fabric/providers/: __init__.py  proxmox.py
tests/: __init__.py  test_api_contract.py  test_basic.py  test_integration.py
